objects/IO__c.object
<CustomObject>
    <fields>
        <fullName>ExternalServiceName__c</fullName>
        <description>External Service Name for diagnosis tests.</description>
        <label>External Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdIOCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Categoría IO</label>
        <referenceTo>IO_Category__c</referenceTo>
        <relationshipLabel>Dispositivos IO</relationshipLabel>
        <relationshipName>IOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <label>Dispositivo IO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IdIOCategory__c</columns>
        <columns>ExternalServiceName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispositivos IO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>